# h-api

./: .cookiecutter.json  .coveragerc  .isort.cfg  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.cookiecutter/: cookiecutter.json
.cookiecutter/includes/pyproject.toml/: dependencies
src/h_api/: exceptions.py  schema.py
src/h_api/bulk_api/: __init__.py  command_batcher.py  command_builder.py  command_processor.py  entry_point.py  executor.py  id_references.py  observer.py
src/h_api/bulk_api/model/: command.py  config_body.py  data_body.py  report.py
src/h_api/model/: base.py  json_api.py
tests/unit/h_api/: conftest.py  exception_test.py
tests/unit/h_api/bulk_api/: command_batcher_test.py  command_processor_test.py  entry_point_test.py  executor_test.py  functional_test.py  id_references_test.py
tests/unit/h_api/bulk_api/model/: command_test.py  data_body_test.py  report_test.py
tests/unit/h_api/model/: base_test.py  json_api_test.py
