[metadata]
name = h-api
description = Tools and components for calling the H API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hypothesis/h-api
project_urls =
    Bug Tracker = https://github.com/hypothesis/h-api/issues
    Changelog = https://github.com/hypothesis/h-api/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jsonschema>=4.18
    importlib_resources
    referencing

[options.packages.find]
where = src

[options.entry_points]

[pycodestyle]
ignore =
    # Disable pycodestyle errors and warnings that we don't care about because
    # Black formats our code for us.
    E203,  # Whitespace before ':',
    E231,  # Missing whitespace after ',',
    E501,  # Line too long,
    W503,  # Line break before binary operator,

    # "Comparison to None should be 'if cond is None:'.
    # PyLint finds these so we don't need pycodestyle to.
    E711,

    # Bare except. PyLint finds these for us so we don't need pycodestyle to.
    E722,

[options.package_data]
h_api =
    resources/**/*
